Randomize room task commit
сделал рандомно выполненные задачи в комнате

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Hotel Konstantin/UserSettings/Layouts/default-2022.dwlt
 /Hotel Konstantin/Library/SplashScreenCache
 /Hotel Konstantin/Library/StateCache
 /Hotel Konstantin/Library/ShaderCache
+Hotel Konstantin/Assets/Materials/Noise.mat
