--- a/Hotel Konstantin/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Hotel Konstantin/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -189,7 +189,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-0.25,\"y\":0.75,\"z\":-0.5}}"
+                "value": "{\"m_Value\":{\"x\":-0.7689650058746338,\"y\":1.6086273193359376,\"z\":-1.6394062042236329}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
